5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4130/executions/1836_2603.log
== TEST (2019-06-27 11:18:26) 
-- CODE:
from numpy import *
from numpy.linalg import *

a = array(eval(input()))

a = a

for i in range(4)
	a[:,i] = sorted(a[:,i], reverse = True)
print(a)
-- ERROR:
File "XXXX", line 8
    for i in range(4)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:18:38) 
-- CODE:
from numpy import *
from numpy.linalg import *

a = array(eval(input()))

a = a

for i in range(4):
	a[:,i] = sorted(a[:,i], reverse = True)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:18:56) 
-- CODE:
from numpy import *
from numpy.linalg import *

a = array(eval(input("Vetor: ")))

a = a

for i in range(4):
	a[:,i] = sorted(a[:,i], reverse = True)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 11:19:17) 
-- CODE:
from numpy import *
from numpy.linalg import *

a = array(eval(input("Vetor: ")))

a = a

for i in range(4):
	a[:,i] = sorted(a[:,i], reverse = True)
print(a)
-- EXECUTION TIME:
1.15801
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
[[4 4 4 4]
 [3 3 3 3]
 [2 2 2 2]
 [1 1 1 1]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
[[4 4 4 3]
 [3 3 3 3]
 [2 2 2 3]
 [1 1 1 3]]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
